remove changing setinterval

--- a/metallic.html
+++ b/metallic.html
@@ -16,10 +16,10 @@
         <div id="game">
             <p id="text">
                 <span class="text-line">Metallic sound</span>
-                <span class="text-line">You see a light coming (from the end)</span>
-                <span class="text-line">This light contains an exhaust unit.</span>
+                <span class="text-line">You see a light coming</span>
+                <span class="text-line">This light contains an exhaust unit</span>
                 <span class="text-line">The exhaust unit consists of a single coil</span>
-                <span class="text-line">Connected to a single core.</span>
+                <span class="text-line">Connected to a single core</span>
                 <span class="text-line">The exhaust sound comes from a light bulb</span>
                 <span class="text-line">The light bulb's sound is a short (25 seconds) vibration</span>
                 <span class="text-line">When in use it can be either a strong vibration (usually a lot of air, or a lot of light, sometimes a lot of heat).</span>
